--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "moji-ui",
-  "version": "0.0.0",
+  "name": "moji-ui-1",
+  "version": "0.0.4",
   "files": [
     "dist/lib/*"
   ],
@@ -10,18 +10,17 @@
     "dev": "vite",
     "build": "vite build"
   },
-  "resolutions": {
-    "node-sass": "npm:sass@1.26.11"
-  },
   "dependencies": {
     "github-markdown-css": "4.0.0",
     "marked": "1.1.1",
     "prismjs": "1.21.0",
+    "rollup": "^2.39.0",
     "vue": "3.0.0",
     "vue-router": "4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "3.0.0",
+    "node-sass": "1.26.11",
     "rollup-plugin-esbuild": "2.5.0",
     "rollup-plugin-scss": "2.6.0",
     "rollup-plugin-terser": "7.0.2",
