--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "node-sass": "1.26.11",
     "rollup-plugin-esbuild": "2.5.0",
     "rollup-plugin-scss": "2.6.0",
-    "rollup-plugin-terser": "7.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "6.0.0-beta.10",
-    "sass": "1.26.11",
+    "sass": "^1.32.8",
     "vite": "1.0.0-rc.1"
   }
 }
