--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "dev": "vite",
     "build": "vite build"
   },
+  "resolutions": {
+    "node-sass": "npm:sass@1.26.11"
+  },
   "dependencies": {
     "github-markdown-css": "4.0.0",
     "marked": "1.1.1",
     "prismjs": "1.21.0",
-    "rollup": "^2.39.0",
     "vue": "3.0.0",
     "vue-router": "4.0.0-beta.3"
   },
